# Lachut

./: .gitignore  CMakeLists.txt  readme.md
addQuiz/: stolice.qcf
quizSource/: Quiz czwarty Żółć.qcf  Quiz drugi Żółć.qcf  Quiz trzeci Żółć.qcf  quiz1.qcf  quiz2.qcf  stolice.qcf
src/client/: client.cpp  common.h  main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h  user.cpp  user.h
src/client/gui/: Connect.ui  Join.ui  Nick.ui  Panel.ui  Question.ui  Role.ui  Setup.ui  Summary.ui  Waiting.ui  gui.h
src/server/: klient.cpp  klient.h  main.cpp  quiz.cpp  quiz.h  uzytkownik.cpp  uzytkownik.h
